--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//css/index.css=UTF-8
 encoding//js/index.js=UTF-8
 encoding//php/signup.php=UTF-8
 encoding/<project>=UTF-8
